Fixed weather icon overlapping text

--- a/css/weather.css
+++ b/css/weather.css
@@ -10,7 +10,6 @@
 #weatherDynamic {
     font-family: 'Open Sans', sans-serif;
     font-size: 2.5em;
-    margin: -1em 0 0 0;
 }
 
 #weatherTable {
